Changed to Rx only softSerial. started impl motor controller serial read

--- a/2019-09-13_TwinController/.settings/org.eclipse.cdt.arduino.core.prefs
+++ b/2019-09-13_TwinController/.settings/org.eclipse.cdt.arduino.core.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-libraries=[{"package"\:"arduino","platform"\:"avr","library"\:"EEPROM"},{"package"\:"arduino","platform"\:"avr","library"\:"Wire"},{"package"\:"arduino","platform"\:"avr","library"\:"SPI"},"AutoPID",{"package"\:"arduino","platform"\:"avr","library"\:"SoftwareSerial"},"LiquidCrystal",{"package"\:"arduino","platform"\:"avr","library"\:"HID"}]
+libraries=[{"package"\:"arduino","platform"\:"avr","library"\:"EEPROM"},{"package"\:"arduino","platform"\:"avr","library"\:"Wire"},{"package"\:"arduino","platform"\:"avr","library"\:"SPI"},{"package"\:"arduino","platform"\:"avr","library"\:"SoftwareSerial"},"LiquidCrystal",{"package"\:"arduino","platform"\:"avr","library"\:"HID"}]
